--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
 <div class="text-box">
-    <h1>World's Biggest Universities</h1>
-    <p>Making website is now one of the easiest thing in the world. Your just need to learn HTML, CSS <br>Javascript and your are good to go.
+    <h1>Empowering Future Web Developers</h1>
+    <p>Creating websites has become one of the most essential skills in today's digital world. With HTML, CSS, and JavaScript, you can bring your ideas to life and create impactful web solutions.
     </p>
     <a href="#" class="hero-btn">Visit Us To know More</a>
 </div>
@@ -36,21 +36,33 @@
 <!-- Course -->
 
 <section class="course">
-    <h1>Courses We Offer</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit.</p>
+    <h1>Explore More With Us</h1>
+    <p>Why Study IMD318?
+        Learn the art of web content management and design while mastering essential tools and techniques to succeed in the tech-driven world.
+        
+        Enroll Now To Begin Your Journey!</p>
 
     <div class="row">
         <div class="course-col">
-            <h3>Intermediate</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque aliequet turpis nulla, eleifend faucibus est sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus Donec sit.</p>
+            <h3>Foundations of Web Design</h3>
+                <ul>
+                    <li>Basics of HTML and CSS</li>
+                    <li>Designing responsive websites</li>
+                </ul>    
         </div>
         <div class="course-col">
-            <h3>Degree</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque aliequet turpis nulla, eleifend faucibus est sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus Donec sit.</p>
+            <h3>Advanced Techniques</h3>
+            <ul>
+                <li>JavaScript for interactivity</li>
+                <li>Content management systems (CMS)</li>
+            </ul>           
         </div>
         <div class="course-col">
-            <h3>Post Graduation</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque aliequet turpis nulla, eleifend faucibus est sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus Donec sit.</p>
+            <h3>Real-World Applications</h3>
+            <ul>
+                <li>Group projects using modern web tools</li>
+                <li>Individual creative website designs</li>
+            </ul>  
         </div>
     </div>
 </section>
@@ -58,26 +70,26 @@
 <!--- campus --->
 
 <section class="campus">
-    <h1>Our Global Campus</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit.</p> 
+    <h1>Our Global Impact</h1>
+    <p>UiTM Machang students have excelled in web design, showcasing their work nationally and internationally.</p> 
 
     <div class="row">
         <div class="campus-col"> <!--42.15-->
             <img src="images/london.png">
             <div class="layer">
-                <h3>LONDON</h3>
+                <h3>MACHANG</h3>
             </div>
         </div>
         <div class="campus-col"> <!--42.15-->
             <img src="images/newyork.png">
             <div class="layer">
-                <h3>NEW YORK</h3>
+                <h3>SHAH ALAM</h3>
             </div>
         </div>
         <div class="campus-col"> <!--42.15-->
             <img src="images/washington.png">
             <div class="layer">
-                <h3>WASHINGTON</h3>
+                <h3>KUALA LUMPUR</h3>
             </div>
         </div>
 
@@ -89,22 +101,22 @@
 
 <section class="facilities">
     <h1>Our Facilities</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit.</p>
+    <p>UiTM Machang offers world-class facilities to support your learning journey:</p>
 
     <div class="row">
         <div class="facilities-col">
             <img src="images/library.png">
             <h3>World Class Library</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit.</p>
+            <p>Our library fully equipped with modern and latest computer labs</p>
         </div>
         <div class="facilities-col">
             <img src="images/basketball.png">
             <h3>Largest Play Ground</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit.</p>
+            <p>Access to extensive sport resources at the UiTM Sport Centre</p>
         </div>        <div class="facilities-col">
             <img src="images/cafeteria.png">
-            <h3>Tasty and Healthy Food</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit.</p>
+            <h3>Healthy Learning Environment</h3>
+            <p>Enjoy a supportive and inspiring campus life.</p>
         </div>
     </div>
 
@@ -120,8 +132,8 @@
         <div class="testimonials-col">
             <img src="images/user1.jpg">
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque aliequet turpis nulla, eleifend faucibus est sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus Donec sit.</p>
-                    <h3>Jennifer Aniston</h3>
+                    <p>IMD318 has transformed the way I think about web development. The hands-on experience is invaluable!</p>
+                    <h3>Siti Nur Aisyah</h3>
                     <i class="fa fa-star"></i> <!--cara masuk icon star-->
                     <i class="fa fa-star"></i> 
                     <i class="fa fa-star"></i> 
@@ -132,8 +144,8 @@
         <div class="testimonials-col">
             <img src="images/user2.jpg">
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque aliequet turpis nulla, eleifend faucibus est sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus Donec sit.</p>
-                    <h3>Andrew Tate</h3>
+                    <p>Learning to create and manage websites has been a game-changer for my career.</p>
+                    <h3>Ahmad Firdaus</h3>
                     <i class="fa fa-star"></i> <!--cara masuk icon star-->
                     <i class="fa fa-star"></i> 
                     <i class="fa fa-star"></i> 
@@ -158,7 +170,7 @@
 
 <section class="footer">
     <h4>About Us</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adispiscing elit. Pellentesque aliequet turpis nulla, eleifend faucibus est <br>sollicitudin ut. Maecenas ut venenatis ex, et dapibus purus Donec sit.</p>
+    <p>UiTM Machang is committed to providing quality education and fostering innovation in web content management and design. Our IMD318 course is designed to equip students with the skills and knowledge to thrive in the digital era.</p>
     <div class="icons">
         <i class="fa fa-facebook"></i>
         <i class="fa fa-twitter"></i>
